v2.1.0 IMPORTANT: Now supports only 1.21.3 and higher. Update nightcore to v2.7.3. You must install EconomyBridge dependency.
NEW:
Objective Categories. Now you can create your own categories for money objectives to make objectives GUI more flexible and user-friendly.

ADDED:
Support for more currency plugins (thanks to EconomyBridge).

IMPROVED:
Reworked event system. Improved code and performance.